DeviceType.xsl updates, and put in package. Fix for pies with backslashes.

--- a/pkg/dell_ft_pie_packager.conf
+++ b/pkg/dell_ft_pie_packager.conf
@@ -15,3 +15,4 @@ module=dell_ft_pie_packager.buildrpm_plugin
 system_id2name_map=%(datadir)s/firmware-tools/system_id2name.ini
 DellDupSpec=%(datadir)s/firmware-tools/update-payload.spec.in
 license=%(datadir)s/firmware-tools/dell-std-license.txt
+device_type_xsl=%(datadir)s/firmware-tools/DeviceType.xsl
