Code review changes, added TODO for other code review comments

--- a/pkg/dell_ft_pie_packager.conf
+++ b/pkg/dell_ft_pie_packager.conf
@@ -7,6 +7,8 @@
 [plugin:dell_ft_pie_packager_create_payload]
 enabled=1
 module=dell_ft_pie_packager.create_payload
+# this is the license that gets dropped into pkgs created by this module,
+# *not* the license for this module.
 license=%(datadir)s/firmware-tools/dell-std-license.txt
 
 [plugin:dell_ft_pie_packager_buildrpm_plugin]
@@ -14,5 +16,7 @@ enabled=1
 module=dell_ft_pie_packager.buildrpm_plugin
 system_id2name_map=%(datadir)s/firmware-tools/system_id2name.ini
 DellDupSpec=%(datadir)s/firmware-tools/update-payload.spec.in
+# this is the license that gets dropped into pkgs created by this module,
+# *not* the license for this module.
 license=%(datadir)s/firmware-tools/dell-std-license.txt
 device_type_xsl=%(datadir)s/firmware-tools/DeviceType.xsl
